hphp/test/zend/good/tests/classes/private_005.php.expectf
Call show()

Fatal error: Call to private method pass::show() from context 'fail' in %s/private_005.php on line 15
